# INF473-x16

./: .gitignore  CNN.py  ML.py  README.md  labelch.npy  predict_5aa9_complex.txt  predict_5aba_complex.txt  predict_5acy_complex.txt  predict_5ahw_complex.txt  predict_5alb_complex.txt  predict_5am6_complex.txt  predict_5bw4_complex.txt  predict_6STDcomplex.txt  predict_6rntcomplex.txt  predict_8a3h_complex.txt  test.py  test.txt
Data/: 1A1E.txt  1A1Ebis.txt  2AZ8.samx  5aa9_complex.txt  5aba_complex.txt  5acy_complex.txt  5alb.txt  5am6_complex.txt  6rntcomplex.txt  8a3h_complex.txt  ColorizerTestFile.txt  nanotube.samx
Elements/: CMakeLists.txt
Elements/Colorizer/: CMakeLists.txt
Elements/Colorizer/form/: SEColorizerAppGUI.ui
Elements/Colorizer/include/: SEColorizerApp.hpp  SEColorizerAppDescriptor.hpp  SEColorizerAppGUI.hpp  SEColorizerColorScheme.hpp
Elements/Colorizer/source/: SEColorizerApp.cpp  SEColorizerAppGUI.cpp  SEColorizerColorScheme.cpp  SEColorizerDescriptor.cpp
Elements/ProteinScanner/: CMakeLists.txt
Elements/ProteinScanner/form/: SEProteinScannerAppGUI.ui
Elements/ProteinScanner/include/: SEProteinScannerApp.hpp  SEProteinScannerAppDescriptor.hpp  SEProteinScannerAppGUI.hpp  SEProteinScannerGrid.hpp  SEProteinScannerGridBoolean.hpp
Elements/ProteinScanner/source/: SEProteinScannerApp.cpp  SEProteinScannerAppGUI.cpp  SEProteinScannerDescriptor.cpp  SEProteinScannerGrid.cpp  SEProteinScannerGrid.cpp.autosave  SEProteinScannerGridBoolean.cpp
build-Elements-Desktop_Qt_5_9_3_GCC_64bit-Default/: CMakeCache.txt  Makefile  SAMSON-Elements-debug.cbp  cmake_install.cmake  install_manifest.txt
build-Elements-Desktop_Qt_5_9_3_GCC_64bit-Default/Colorizer/: Makefile  SEColorizer_automoc.cpp  cmake_install.cmake  moc_SEColorizerAppGUI.cpp  ui_SEColorizerAppGUI.h
build-Elements-Desktop_Qt_5_9_3_GCC_64bit-Default/ProteinScanner/: Makefile  cmake_install.cmake  ui_SEProteinScannerAppGUI.h
build-Elements-Desktop_Qt_5_9_3_GCC_64bit-Release/: CMakeCache.txt  Makefile  SAMSON-Elements-release.cbp  cmake_install.cmake  install_manifest.txt
build-Elements-Desktop_Qt_5_9_3_GCC_64bit-Release/Colorizer/: Makefile  cmake_install.cmake  moc_SEColorizerAppGUI.cpp  ui_SEColorizerAppGUI.h
build-Elements-Desktop_Qt_5_9_3_GCC_64bit-Release/ProteinScanner/: Makefile  SEProteinScanner_automoc.cpp  cmake_install.cmake  moc_SEProteinScannerAppGUI.cpp
